--- a/css/index.css
+++ b/css/index.css
@@ -7,11 +7,11 @@
 .banner {
   width: 100%;
   height: 100vh;
-  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(love.png);
+  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(inspiredlove.png);
   background-size: cover;
   background-position: center;
 }
-
+ 
 .navbar {
   width:85%; /* Container space */
   margin: auto; /* Obviously you know what this is */
