--- a/css/phone_ver.css
+++ b/css/phone_ver.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 360px) {
+@media screen and (max-width: 420px) {
   * {
     padding: 0px;
     margin: 0px;
@@ -7,7 +7,7 @@
 
   .banner {
     width: 100%;
-    height: 100vh;
+    height: 20vh;
     background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(inspiredlove.png);
     background-size: cover;
     background-position: center;
@@ -25,12 +25,11 @@
   .navbar ul li { /* Design the link's space */
     list-style: none;
     margin: 0;
-    display: inline-block; /* Spreads the links into columns */
+    display: inline; /* Spreads the links into columns */
     margin: 0px 9px;
     position: relative; /* This will parent the ::after */
+    display: none;
   }
-  
-
   
   .navbar ul li a { /* Design the links */
     text-decoration: none;
@@ -40,22 +39,105 @@
   }
   
   .logo {
-    width: 150px;
+    width: 300px;
+    margin: auto;
+    display: none;
   }
-  
-}
 
-  /*.navbar ul li::after {
+  #explore {
+    width: 100%;
+    position: absolute;
+    text-align: center;
+    color: #ffff;
+  }
+
+  #explore h1 {
+    font-size: 25px;
+    margin-top: 7.5vh;
+    color: black;
+  }
+
+  #explore p {
+    font-family: 'Courier New', Courier, monospace;
+    margin-top: 7vh;
+  }
+
+                              /* 2nd Block */
+  .menu {
+    width: 100%;
+    height: 5vh;
+    margin: auto;
+    padding: 5px 0; 
+    position: relative;
+    text-align: center;
+    background-color: grey;
+    display: flex; /* Somehow it aligns the items in-line */
+    align-items: center; /* duhh... */
+    justify-content: space-between;
+  }
+
+  .menu ul li { /* Design the link's space */
+    list-style: none;
+    margin: 0;
+    display: inline; /* Spreads the links into columns */
+    margin: 0px 9px;
+    position: relative; /* This will parent the ::after */
+    margin-right: 2vh;
+  }
+
+  .menu ul li::after {
     content: '';
     height: 3px;
     width: 0;
-    background-color: #009688;
+    background-color: #520096;
     position: absolute;
     left: 0;
     bottom: -10px;
     transition: 0.5s; /* opkors we need to look the :hover beautipool hehehe */
+  }
   
-  
-  /*.navbar ul li:hover::after {
+  .menu ul li:hover::after {
     width: 100%;
   }
+
+  .menu ul li a { /* Design the links */
+    text-decoration: none;
+    color: white;
+    text-transform: uppercase;
+    font-size: 15px;
+  }
+
+  .menu .icon {
+    margin-top: 0.5vh;
+    margin-left: 5px;
+    width: 40px;
+  }
+
+                              /* 3rd Block */
+  .content {
+    width: 100%;
+    height: 75vh;
+    background-color:white;
+  }
+
+  #socials {
+    text-align: center;
+    padding-top: 4vh;
+  }
+
+  #socials button {
+    margin-top: 10px;
+    width: 150px;
+    padding: 10px ;
+    text-align: center;
+    margin: 2px 5px;
+    border-radius: 25px;
+    font-weight: bold;
+    border: 2px solid #009688;
+    background: transparent;
+    cursor: pointer;
+  }
+
+  
+
+}
