--- a/css/phone_ver.css
+++ b/css/phone_ver.css
@@ -108,9 +108,12 @@
   }
 
   .menu .icon {
-    margin-top: 0.5vh;
-    margin-left: 5px;
+    margin-right: 5px;
     width: 40px;
+  }
+
+  .brandlogo {
+    width: 300px;
   }
 
 /* 3rd Block */
