--- a/css/phone_ver.css
+++ b/css/phone_ver.css
@@ -5,6 +5,12 @@
     font-family: sans-serif;
   }
 
+/* Deactivating Area */
+#intro {
+  display: none;
+}
+/* End of deactivating area */
+
   .banner {
     width: 100%;
     height: 20vh;
@@ -49,6 +55,7 @@
     position: absolute;
     text-align: center;
     color: #ffff;
+    display: block;
   }
 
   #explore h1 {
@@ -121,14 +128,15 @@
     width: 100%;
     height: 75vh;
     background-color:white;
+    display: block;
   }
 
-  #socials {
+  #social {
     text-align: center;
     padding-top: 4vh;
   }
 
-  #socials button {
+  #social button {
     margin-top: 10px;
     width: 150px;
     padding: 10px ;
@@ -136,11 +144,47 @@
     margin: 2px 5px;
     border-radius: 25px;
     font-weight: bold;
+    color: black;
     border: 2px solid #009688;
     background: transparent;
     cursor: pointer;
   }
+}
 
-  
+/* Cards */
+.phonecontent {
+  width: 100%;
+  margin-top: 3vh;
+  display: flex;
+  justify-content: center;
+}
 
+.card {
+  /* Add shadows to create the "card" effect */
+  width: 45%;
+  margin: 5px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  border-radius: 5px;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+/* Add some padding inside the card container */
+.container {
+  padding: 2px 16px;
+}
+
+.container p {
+  margin-top: 1.5vh;
+  margin-bottom: 1.5vh;
+}
+
+#cardimg {
+  border-radius: 5px 5px 0 0;
+  width: 100%;
+  height: 160px;
 }
