--- a/css/phone_ver.css
+++ b/css/phone_ver.css
@@ -5,12 +5,8 @@
     font-family: sans-serif;
   }
 
-  html {
-    overflow: hidden;
-  }
-
   /* Deactivating Area */
-  #intro {
+  #intro, .custom-shape-divider-bottom-1666479870, .socialnav-container {
     display: none; 
   }
   /* End of deactivating area */
@@ -24,7 +20,7 @@
   }
 
   .navbar {
-    width:100%; /* Container space */
+    width: 100%; /* Container space */
     margin: auto; /* Obviously you know what this is */
     padding: 0px 0; 
     display: flex; /* Somehow it aligns the items in-line */
@@ -149,7 +145,6 @@
     border: 2px solid #009688;
     cursor: pointer;
   }
-}
 
 /*! Cards */
   .bottom-content {
@@ -158,12 +153,17 @@
     display: flex;
   }
 
+  #bye {
+    display: flex;
+  }
+
   .phonecontent {
     padding: 0px;
-    height: 74vh;
+    height: 73.96vh;
     width: 100%;
     display: flex;
     flex-wrap: wrap;
+    align-content: flex-start;
     justify-content: center;
     gap: 5px;
     background-image: linear-gradient(135deg, #40D9AA, #35A7E3);
@@ -173,6 +173,8 @@
     height: 280px;
     width: 45%;
     margin: 5px;
+    display: flex;
+    flex-wrap: wrap;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
@@ -224,3 +226,21 @@
   .new_content h4 {
     margin-bottom: 20px;
   }
+
+  /* This is another segment */
+  .block2 {
+    background-position: 80% 100%;
+  }
+
+  .block2-card1 {
+    height: 10vh;
+    width: 70%;
+  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1rem;
+    background-color: #0088a9;
+  }
+
+} /*! Please don't go under here! */
