--- a/css/login.css
+++ b/css/login.css
@@ -5,6 +5,10 @@
   padding: 0;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   height: 100vh;
   width: 100%;
@@ -15,7 +19,8 @@ body {
   -o-background-size: cover;
   background-size: cover;
   font-family: 'Roboto', sans-serif;
-  overflow: hidden;
+  overflow-y: hidden;
+  position: relative;
 }
 
 video {
@@ -183,7 +188,7 @@ video {
   
 }
 
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 420px) {  
   body {
     height: 100vh;
     width: 100%;
