--- a/inside/css/index.css
+++ b/inside/css/index.css
@@ -14,7 +14,6 @@
 body::-webkit-scrollbar {
   width: 10px;
   height: 10px;
-  ;
 }
 body::-webkit-scrollbar-thumb {
   background: #201c29;
@@ -129,7 +128,7 @@ body::-webkit-scrollbar-track {
   border: none;
 }
 
-span {
+.ambot {
   background: #009688;
   height: 100%;
   width: 0;
@@ -141,119 +140,13 @@ span {
   transition: 0.5s;
 }
 
-.socialnav-container {
-  height: 100vh;
-  width: 5%;
-  display: flex;
-  align-items: center;
-  position: absolute;
-  z-index: 1;
-}
-
 @media screen and (max-width: 1100px) {
-  .socialnav-container, .socialnav, .navbar ul {
+  .navbar ul {
     display: none;
   }
   .navbar {
     justify-content: center;
   }
-}
-
-.socialnav {
-  height: 20vh;
-  width: 5vh;
-  margin-left: 2vh;
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  border-radius: 25px;
-  justify-content: center;
-  gap: 10px;
-  overflow: visible;
-  background-color: white;
-  position: relative;
-}
-
-.facebook {
-  height: 50px;
-  width: 50px;
-  position: absolute;
-  top: 2vh;
-  border-radius: 10px;
-  background-color:  #3b5998;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.2s;
-  font-size: 0px;
-}
-
-.facebook:hover {
-  width: 150px;
-  font-size: 20px;
-  box-shadow: 0 8px 16px 10px rgba(0,0,0,0.2);
-  transition: 0.2s;
-}
-
-.instagram {
-  height: 50px;
-  width: 50px;
-  border-radius: 10px;
-  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: 0.2s;
-  font-size: 0px;
-}
-
-.instagram:hover {
-  width: 150px;
-  transition: 0.2s;
-  font-size: 20px;
-}
-
-.twitter {
-  height: 50px;
-  width: 50px;
-  position: absolute;
-  bottom: 2vh;
-  border-radius: 10px;
-  background-color: #1da1f2;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: 0.2s;
-  font-size: 0px;
-}
-
-.twitter:hover {
-  width: 150px;
-  transition: 0.2s;
-  font-size: 20px;
-}
-
-/* First Divider */
-.custom-shape-divider-bottom-1666479870 {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  overflow: hidden;
-  line-height: 0;
-  transform: rotate(180deg);
-}
-
-.custom-shape-divider-bottom-1666479870 svg {
-  position: relative;
-  display: block;
-  width: calc(100% + 1.3px);
-  height: 254px;
-}
-
-.custom-shape-divider-bottom-1666479870 .shape-fill {
-  fill: #FFFFFF;
 }
 /*! End */
 
@@ -284,4 +177,108 @@ span {
   );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+/*! The end of the webite */
+footer {
+  width: 100%;
+  display: flex;
+  justify-content: center; 
+  position: absolute;
+  top: 85vh;
+}
+
+footer .icon {
+  position: relative;
+  margin: 0 20px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  z-index: 3;
+  transition: all 0.5s cubic-bezier(0.68,-0.55,0.265,1.55);
+}
+
+footer .icon .ico {
+  position: relative;
+  z-index: 3;
+  height: 60px;
+  width: 60px;
+  display: block;
+  background: #fff;
+  border-radius: 50%;
+  text-align: center;
+  box-shadow: 0 10px 10px rgba(0,0,0,.2);
+}
+
+footer .icon:hover .ico {
+  color: #fff;
+}
+
+footer .icon .ico i {
+  font-size: 35px;
+  line-height: 60px;
+}
+
+footer .icon .tooltip {
+  position: absolute;
+  top: 0px;
+  color: #fff;
+  background: #fff;
+  font-size: 20px;
+  padding: 10px 18px;
+  border-radius: 25px;
+  box-shadow: 0 10px 10px rgba(0,0,0,.2);
+  pointer-events: none;
+  opacity: 0;
+  transition: all 0.5s cubic-bezier(0.68,-0.55,0.265,1.55);
+}
+
+footer .icon:hover .tooltip {
+  top: -70px;
+  opacity: 1;
+  pointer-events: auto;
+}
+
+footer .icon .tooltip::before {
+  content: '';
+  position: absolute;
+  height: 16px;
+  width: 16px;
+  background: #fff;
+  left: 50%;
+  bottom: -8px;
+  transform: translateX(-50%) rotate(45deg);
+  transition: all 0.5s cubic-bezier(0.68,-0.55,0.265,1.55);
+}
+
+footer .icon:hover .ico,
+footer .icon:hover .tooltip{
+  text-shadow: 0 -1px 0 rgba(0,0,0,.5);
+}
+
+/*TODO: The color inside the bubble */
+footer .twitter:hover .ico,
+footer .twitter:hover .tooltip,
+footer .twitter:hover .tooltip::before {
+  background: rgb(14, 179, 255);
+}
+
+footer .instagram:hover .ico,
+footer .instagram:hover .tooltip,
+footer .instagram:hover .tooltip::before {
+  background: rgb(255, 5, 130);
+}
+
+footer .github:hover .ico,
+footer .github:hover .tooltip,
+footer .github:hover .tooltip::before {
+  background: #272727;
+}
+
+footer .facebook:hover .ico,
+footer .facebook:hover .tooltip,
+footer .facebook:hover .tooltip::before {
+  background: rgb(81, 18, 255);
 }
