--- a/inside/css/index.css
+++ b/inside/css/index.css
@@ -2,6 +2,16 @@
   padding: 0px;
   margin: 0px;
   font-family: sans-serif;
+  box-sizing: border-box
+}
+
+html {
+  scroll-behavior: smooth !important;
+  -webkit-scroll-behavior: auto !important;
+}
+
+html, body {
+  height: 100%;
 }
 
 .menu, .phonecontent, .card {
@@ -27,12 +37,27 @@ body::-webkit-scrollbar-track {
   background: linear-gradient(90deg,#201c29,#201c29 1px,#17141d 0,#17141d);
 }
 
+.parallax {
+  /* The image used */
+  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(inspiredlove.png);
+
+  /* Full height */
+  height: 200%; 
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+/* *Cool parallax above */
+
+
 .banner {
   width: 100%;
-  height: 100vh;
-  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(inspiredlove.png);
-  background-size: cover;
-  background-position: center;
+  height: 50vh;
+  top: 0;
+  position: absolute;
 }
 
 .navbar {
@@ -148,44 +173,123 @@ body::-webkit-scrollbar-track {
     justify-content: center;
   }
 }
-/*! End */
+/*! FLoating Profile */
+/* Style the tab */
+.tab {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  float: left;
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
+  width: 30%;
+  height: 100%;
+  border-radius: 15px 0 0 15px;
+}
+
+.tablinks {
+  text-align: center;
+  border-radius: 15px 0 0 15px;
+}
+
+/* Style the buttons that are used to open the tab content */
+.tab button {
+  display: block;
+  background-color: inherit;
+  color: black;
+  padding: 22px 16px;
+  width: 100%;
+  border: none;
+  outline: none;
+  text-align: left;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ddd;
+}
+
+/* Create an active/current "tab button" class */
+.tab button.active {
+  background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+  float: left;
+  padding: 0px 50px;
+  background-color: #f1f1f1;
+  border: 1px solid #ccc;
+  width: 70%;
+  border-left: none;
+  border-radius: 0 15px 15px 0;
+  height: 100%;
+}
+
+.tabcontent h3 {
+  margin: 25px;
+  text-align: center;
+}
+
+/** Floating Img */
+.earth {
+  height: 800px;
+  position: absolute;
+  top: 110vh;
+  left: -30vh;
+}
+/** Floating Img */
 
 .block2 {
-  height: 100vh;
-  width: 100%;
+  height: 70vh;
+  width: 90%;
+  margin: 0;
+  padding: 20px 20px 20px 400px;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  background-size: cover;
+  border-radius: 30px;
+
+  position: absolute;
+  top: 150vh;  
+  left: 50%; 
+  transform: translate(-50%, -50%);
 }
 
 .block2-card1 {
-  height: 100vh;
-  width: 70%;
+  height: 100%;
+  width: 100%;
+}
 
+.block2-card2 {
+  height: 100%;
+  width: 100%;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 60px;
-  color: white;
-  -webkit-text-stroke: 2px black;
-  /* with multiple color stop lengths */
-  background-image: repeating-linear-gradient(
-    -45deg,
-    yellow 0 20px,
-    black 20px 40px
-  );
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.block2-card2-1 {
+  height: 100%;
+  width: 100%;
+  display: block;
+}
+
+.block2-card2-2 {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
 /*! The end of the webite */
 footer {
+  height: 10vh;
   width: 100%;
   display: flex;
-  justify-content: center; 
-  position: absolute;
-  top: 85vh;
+  justify-content: center;
+
+  background: #252525;
 }
 
 footer .icon {
