--- a/inside/css/projects css/cats.css
+++ b/inside/css/projects css/cats.css
@@ -1,3 +1,8 @@
+main {
+  width: 100%;
+  text-align: center;
+}
+
 h1, h2, p {
   text-align: center;
 }
@@ -20,6 +25,7 @@ h2 {
 }
 
 .boxed {
+  height: auto;
   display: flex;
   justify-content: center;
   align-items: center;
