--- a/main/Projects/css/coffee_menu.css
+++ b/main/Projects/css/coffee_menu.css
@@ -5,6 +5,7 @@
 
 html {
   height: 100%;
+  overflow: hidden;
 }
 
 body {
@@ -118,18 +119,64 @@ footer a{
   margin-bottom: 5px;
 }
 
-a {
+footer p a {
   color: black;
 }
 
-a:visited {
+footer p a:visited {
   color: black;
 }
 
-a:hover {
+footer p a:hover {
   color: brown;
 }
 
-a:active {
+footer p a:active {
   color: brown;
+}
+
+.attribution {
+  height: 3vh;
+  width: 98%;
+  padding: 0 20px 0 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  background-color: #232323;
+  color: #fff;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  overflow: hidden;
+}
+
+.attribution p {
+  font-size: 15px;
+}
+
+.mentor {
+  color: blue;
+}
+
+.attribution p a:visited {
+  color: rgb(23, 226, 23);
+}
+
+.attribution .phone {
+  display: none;
+}
+
+@media screen and (max-width: 420px){
+  * {
+    margin: 0 10 0 10;
+  }
+
+  .attribution .web {
+    display: none;
+  }
+
+  .attribution .phone {
+    display: block;
+  }
 }
