--- a/homepage/css/index.css
+++ b/homepage/css/index.css
@@ -15,6 +15,14 @@ html {
   box-sizing: inherit;
 }
 
+input,
+textarea,
+button,
+select,
+a {
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
 body {
   width: 100%;
   display: flex;
