--- a/homepage/css/about.css
+++ b/homepage/css/about.css
@@ -1,49 +1,110 @@
 * {
-  padding: 0px;
-  margin: 0px;
-  font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
+*, *:before, *:after {box-sizing: inherit;}
+input,textarea,button,select,a {-webkit-tap-highlight-color: rgba(0,0,0,0);}
+
+html {box-sizing: border-box;}
 body {
-  scroll-behavior: smooth;
-}
-
-html, body {
-  margin: 0; 
-  height: 100%; 
-  overflow: hidden}
-
-#block1-left {
-  background-color: skyblue;
-  float: left;
-  width: 25%;
-  height: 15rem;
-}
-
-#block1-right {
-  background-color: khaki;
-  float: right;
-  width: 75%;
-  height: 15rem;
-}
-
-#block2-left {
-  background-color: burlywood;
-  float: left;
-  width: 75%;
-  height: 55rem;
-}
-
-#block2-right {
-  background-color: bisque;
-  float: right;
-  width: 25%;
-  height: 55rem;
-}
-
-#block3 {
-  background-color: aquamarine;
+  height: auto;
   width: 100%;
-  height: 100vh;
-  float: left;
+  background-color: rgb(218, 238, 255);
 }
+
+.mainContainer {
+  display: grid; /** This is the grid declaration */
+  gap: 1.5rem;
+  /* grid-template-columns: repeat(4, 1fr); *//** Make a column */
+  box-sizing: border-box;
+  width: min(95%, 70rem);
+  margin-inline: auto;
+  padding-block: 2rem;
+}
+@media screen and (min-width: 50em) {
+  .grid-col-span-across {grid-column: span 2;} /*? Jump from left and right */
+
+  .mainContainer {
+    grid-template-columns: repeat(4, 1fr);
+  }
+  .blocks:last-child {
+    grid-column-start: 4;
+    grid-row: 1 / 3;
+  }
+}
+
+/*! Start of Grid */
+.grid-row-span-across {grid-row: span 2;} /*? Jump from up and down */
+
+.blocks {
+  padding: 2rem;
+  border-radius: 0.5rem;
+
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  box-shadow:
+    0px 0px 2.8px rgba(0, 0, 0, 0.02),
+    0px 0px 9.4px rgba(0, 0, 0, 0.03),
+    0px 0px 42px rgba(0, 0, 0, 0.05)
+  ;
+}
+
+/* .blocks:last-child {
+  grid-column-start: 4;
+  grid-row-start: 1;
+  grid-row-end: 3; -- ? or you can use [span 2]
+  grid-row: 1 / 3;
+} */
+
+.blocks > h1 {font-size: 1rem;}
+.blocks > p {font-size: 0.8rem;}
+
+.heading {
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+}
+.heading > img {
+  height: 30px;
+  width: 30px;
+  object-fit: cover;
+}
+
+.title > h1 {font-size: 0.8rem;}
+.title > p {font-size: 0.7rem;}
+
+.pad1 {background-color: #3da9fc; color: white;}
+.pad2 {background-color: #90b4ce;}
+.pad3 {background-color: whitesmoke}
+.pad4 {background-color: #29325a; color: white;}
+.pad5 {background-color: whitesmoke}
+
+/*! Experiment */
+/* .blocks:nth-child(1) {grid-area: one;} */
+/* .blocks:nth-child(2) {grid-area: two;} */
+/* .blocks:nth-child(3) {grid-area: three;} */
+/* .blocks:nth-child(4) {grid-area: four;} */
+/* .blocks:nth-child(5) {grid-area: five;} */
+
+/*? .blocks {
+  grid-auto-columns: 1fr;
+  grid-template-areas:
+    'one'
+    'two'
+    'three'
+    'four'
+    'five';
+} */
+
+/*? @media (min-width: 30rem) {
+  .blocks {
+    grid-template-areas: 
+      'one one'
+      'two five'
+      'three five'
+      'four five';
+  }
+} */
