--- a/homepage/css/preload.css
+++ b/homepage/css/preload.css
@@ -21,7 +21,7 @@ header, #panels, .media, main, footer {
 }
 #floatingText{
     font-family: 'Plaguard', Arial, sans-serif;
-    font-size: 100px;
+    font-size: 6.25rem;
     color: rgba(23, 58, 172, 0.822);
     position: relative;
     display: inline-block;
@@ -29,7 +29,7 @@ header, #panels, .media, main, footer {
     animation-delay: calc(.1s * var(--i));
 }
 
-@media screen and (max-width: 420px){
+@media screen and (max-width: 620px){
     #floatingText{
         font-size: 40px;
     }
